plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.26.0'
}

group 'org.todo'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.2'
}

sourceCompatibility = '22'
targetCompatibility = '22'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'org.todo.todolist' // Your module name
    mainClass = 'org.todo.todolist.Main' // Your main class
}

javafx {
    version = '22.0.1'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {

    implementation 'net.java.dev.jna:jna:5.12.1'
    implementation 'net.java.dev.jna:jna-platform:5.12.1'
    
    implementation('com.dlsc.formsfx:formsfx-core:11.6.0') {
        exclude(group: 'org.openjfx')
    }
    implementation 'org.openjfx:javafx-controls:22.0.1'
    implementation 'org.openjfx:javafx-fxml:22.0.1'

    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
}

test {
    useJUnitPlatform()
}

jlink {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']

    // Add necessary JavaFX modules
    addOptions('--add-modules', 'javafx.controls,javafx.fxml')

    launcher {
        name = 'FocusFlow'
    }

    jpackage {
        appVersion = '1.0'
        imageName = 'FocusFlow' // Name of the runtime image
        installerName = 'FocusFlowSetup' // Name of the installer
        installerType = 'exe' // Installer type for Windows
        description = 'FocusFlow Task Manager'
        //appIcon = file('src/main/resources/icons/app.ico') // Optional: Add your icon
        jvmArgs = ['-Xmx512m'] // Optional: JVM arguments
    }
}